--- a/XimbleTestApp/Ximble.Api/appsettings.json
+++ b/XimbleTestApp/Ximble.Api/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=FILIPKR\\SQLEXPRESS02;Database=AdventureWorks2017;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
